[gd_scene load_steps=6 format=3 uid="uid://bu3ffr5nfl2mp"]

[ext_resource type="PackedScene" uid="uid://4pavgxtipt33" path="res://Buttons/Back_to_StoryMode.tscn" id="1_cj8is"]
[ext_resource type="Script" path="res://StoryMode/LVs/lv_6_xor.gd" id="1_ww7bt"]
[ext_resource type="PackedScene" uid="uid://5dmbflgxfno1" path="res://Logic_pice/xor_gate.tscn" id="2_vfwrt"]
[ext_resource type="PackedScene" uid="uid://cd0tjidll0v8k" path="res://Logic_pice/Toggle_Button.tscn" id="3_fg4vm"]
[ext_resource type="PackedScene" uid="uid://crk8ewvm00l4o" path="res://Logic_pice/input_terminal.tscn" id="4_6agos"]

[node name="lv_6_xor" type="Node2D"]
script = ExtResource("1_ww7bt")

[node name="Back_to_StoryMode" parent="." instance=ExtResource("1_cj8is")]
position = Vector2(1072, 5)

[node name="Xor_Gate" parent="." instance=ExtResource("2_vfwrt")]
position = Vector2(560, 261)

[node name="Toggle_Button" parent="." instance=ExtResource("3_fg4vm")]
position = Vector2(220, 198)

[node name="Toggle_Button2" parent="." instance=ExtResource("3_fg4vm")]
position = Vector2(235, 319)

[node name="Input_terminal" parent="." instance=ExtResource("4_6agos")]
position = Vector2(836, 272)
